--- a/WpfDataGridSampleApp/WpfDataGridSampleApp/WpfDataGridSampleApp.csproj
+++ b/WpfDataGridSampleApp/WpfDataGridSampleApp/WpfDataGridSampleApp.csproj
@@ -138,6 +138,7 @@
     <Compile Include="ViewModels\FrozenColumnCountViewModel.cs" />
     <Compile Include="ViewModels\GroupingPerformanceImprovementViewModel.cs" />
     <Compile Include="ViewModels\GroupingViewModel.cs" />
+    <Compile Include="ViewModels\InputViewModel.cs" />
     <Compile Include="ViewModels\LargeColumnPerformanceImprovementViewModel.cs" />
     <Compile Include="ViewModels\LargeColumnPerformanceViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="ViewModels\RowDetailViewModel.cs" />
     <Compile Include="ViewModels\ScenarioSelectViewModel.cs" />
     <Compile Include="ViewModels\ScenarioViewModel.cs" />
+    <Compile Include="ViewModels\SelectionModeViewModel.cs" />
     <Compile Include="ViewModels\StylingViewModel.cs" />
     <Compile Include="ViewModels\UseLayoutRoundingViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
@@ -173,6 +175,9 @@
     <Compile Include="Views\GroupingView.xaml.cs">
       <DependentUpon>GroupingView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\InputView.xaml.cs">
+      <DependentUpon>InputView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LargeColumnPerformanceImprovementView.xaml.cs">
       <DependentUpon>LargeColumnPerformanceImprovementView.xaml</DependentUpon>
     </Compile>
@@ -193,6 +198,9 @@
     </Compile>
     <Compile Include="Views\ScenarioSelectView.xaml.cs">
       <DependentUpon>ScenarioSelectView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SelectionModeView.xaml.cs">
+      <DependentUpon>SelectionModeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\StylingView.xaml.cs">
       <DependentUpon>StylingView.xaml</DependentUpon>
@@ -262,6 +270,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\InputView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\LargeColumnPerformanceImprovementView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -287,6 +299,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ScenarioSelectView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SelectionModeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
